--- a/idris.cabal
+++ b/idris.cabal
@@ -561,6 +561,7 @@ Library
                 , Idris.Providers
                 , Idris.REPL
                 , Idris.REPLParser
+                , Idris.Server
                 , Idris.Transforms
                 , Idris.TypeSearch
                 , Idris.Unlit
@@ -603,6 +604,7 @@ Library
 
   Build-depends:  base >=4 && <5
                 , Cabal
+                , aeson >= 0.7
                 , annotated-wl-pprint >= 0.5.3
                 , ansi-terminal
                 , ansi-wl-pprint
