--- a/idris.cabal
+++ b/idris.cabal
@@ -606,45 +606,44 @@ Library
   Build-depends:  base >=4 && <5
                 , Cabal
                 , aeson == 0.7.0.6
-                , annotated-wl-pprint >= 0.5.3
-                , ansi-terminal
-                , ansi-wl-pprint
+                , annotated-wl-pprint == 0.5.3
+                , ansi-terminal == 0.6.1.1
+                , ansi-wl-pprint == 0.6.7.1
                 , binary
-                , blaze-html >= 0.6.1.3
-                , blaze-markup >= 0.5.2.1 && < 0.7.0.0
+                , blaze-html == 0.7.0.2
+                , blaze-markup == 0.6.1.0
                 , bytestring
-                , cheapskate
+                , cheapskate == 0.1.0.1
                 , containers >= 0.5
-                , directory
                 , directory >= 1.2
                 , filepath
-                , haskeline >= 0.7
-                , language-java >= 0.2.6
-                , lens >= 4.1.1
+                , haskeline == 0.7.1.2
+                , language-java == 0.2.6
+                , lens == 4.2
                 , mtl
-                , parsers >= 0.9
+                , parsers == 0.10.3
                 , pretty
                 , process
                 , split
                 , text
                 , time >= 1.4
                 , transformers
-                , trifecta >= 1.1
-                , unordered-containers
-                , utf8-string
+                , trifecta == 1.4.2
+                , unordered-containers == 0.2.4.0
+                , utf8-string == 0.3.8
                 , vector
-                , vector-binary-instances
+                , vector-binary-instances == 0.2.1.0
                 , network
-                , xml
+                , xml == 1.3.13
                 , deepseq
                 , zlib
-                , optparse-applicative
-                , warp >= 2.0
+                , optparse-applicative == 0.9.0
+                , warp == 2.1.5.2
                 , wai == 2.1.0.3
-                , conduit
-                , conduit-combinators
-                , http-types
-                , void
+                , conduit == 1.1.4
+                , conduit-combinators == 0.2.5.2
+                , http-types == 0.8.5
+                , void == 0.6.1
   Extensions:     MultiParamTypeClasses
                 , FunctionalDependencies
                 , FlexibleContexts
